Fix UI grid layout and scrollbar

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -61,3 +61,30 @@ button:focus-visible {
     background-color: #f9f9f9
   }
 }
+
+/* Style the scrollbar */
+/* * {
+  scrollbar-width: thin; 
+  scrollbar-color: grey transparent; 
+} */
+
+::-webkit-scrollbar {
+  width: 6px; /* Adjust scrollbar width */
+}
+
+::-webkit-scrollbar-thumb {
+  /* background-color: transparent;  */
+  border-radius: 6px;
+  /* transition: background-color 0.2s ease-in-out; */
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent; /* Track color */
+}
+::-webkit-scrollbar-track-piece {
+  background-color: transparent; /* Track color */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: red;
+}
